# ULRE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GEOMETRY_CODE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_OfflineMesh.md  REFACTORING_PROPOSAL.md  SHADER_TEMPLATE_ENGINE_SUMMARY.md  STEP_1_2_IMPLEMENTATION_SUMMARY.md  STEP_3_8_9_IMPLEMENTATION_SUMMARY.md  STEP_BY_STEP_EXECUTION_PLAN.md  ULRE.code-workspace  WIP.cpp  fetch.bat  pull.bat  pull_all.bat  rename.md  test_aabb_fix.cpp  test_exclusive_dispatcher  test_spline  test_spline_minimal.cpp  vcpkg.json
3rdpty/NvTriStrip/: CMakeLists.txt  NvTriStrip.cpp  NvTriStrip.h  NvTriStripObjects.cpp  NvTriStripObjects.h  VertexCache.h
example/: AtmosphericSkyExample.cpp  CMakeLists.txt  EventDispatcherExclusiveTest.cpp  InstancedMeshComponentDesign.h  InstancedMeshComponentExample.cpp  Line3D_Usage_Example.cpp  MaterialCreaterTest.cpp  ShaderTemplateEngineTest.README.md  ShaderTemplateEngineTest.cpp  SplineDemo.cpp  SplineTest.cpp  test_event_dispatcher.cpp
example/2dVector/: CMakeLists.txt  LerpLine.cpp  line.cpp  roundbox.cpp
example/Basic/: AtmosphereSkyMinimal.cpp  Billboard2D.cpp  Billboard2DWay.cpp  BillboardTest.cpp  CMakeLists.txt  CapsuleTest.cpp  ECS_Test.cpp  ExtrudedPolygonTest.cpp  FBXModelTest.cpp  GLTFLoaderTest.cpp  GLTF_README.md  IMPLEMENTATION_SUMMARY.md  LightVizTest.cpp  LineManagerTest.cpp  RenderBoundBox.cpp  RenderToTexture.cpp  SimpleCube.cpp  SimpleECSFramework.cpp  SimpleECSFramework.h  TerrainHeightmap.cpp  WallsFromPolyline.cpp  WallsFromPolyline_Texture.cpp  auto_instance.cpp  auto_instance_ECS.README.md  auto_instance_ECS.cpp  auto_instance_use_ECS.cpp  auto_merge_material_instance.cpp  auto_merge_material_instance_ECS.README.md  auto_merge_material_instance_ECS.cpp  auto_merge_material_instance_use_ECS.cpp  complex_scene.gltf  draw_triangle_ECS_standalone.README.md  draw_triangle_ECS_standalone.cpp  draw_triangle_in_NDC.cpp  draw_triangle_use_ECS.README.md  draw_triangle_use_ECS.cpp  draw_triangle_use_UBO.cpp  first_app.cpp  rf_test.cpp  triangle.gltf
example/DirectGLRender/: CMakeLists.txt  main.cpp
example/DirectGLTexture/: CMakeLists.txt  TGATexture.cpp  main.cpp
example/DrawTriangle/: CMakeLists.txt  main.cpp
example/EnumRenderDevice/: CMakeLists.txt  main.cpp
example/Environment/: AtmosphereSkyMinimal.cpp  CMakeLists.txt  TerrainHeightmap.cpp
example/GLTF/: CMakeLists.txt  GLTFLoader.cpp  GLTFLoader.h  GLTFMaterial.h  LoadGLTF.cpp
example/GUI/: CMakeLists.txt  DrawMultiLineText.cpp  DrawRoundrectangle.cpp  DrawText.cpp
example/Geometry/: CMakeLists.txt  DrawLineManager.cpp  DrawLineManager.h  ExtrudedPolygonTest.cpp  GeometryTest.cpp  LineRenderManager.cpp  LineRenderManager.h  LineRenderTest.cpp  LineWidthBatch.cpp  LineWidthBatch.h  LoadGeometry.cpp  LoadScene.cpp  RevolutionPolygonTest.cpp  SceneData.h  SharedLineBackup.h  WallsFromPolyline.cpp  WireShapeTest.cpp
example/Gizmo/: BlenderAxis.cpp  CMakeLists.txt  ExtrudedPolygonTest.cpp  Gizmo.h  Gizmo3DMove.cpp  Gizmo3DRotate.cpp  Gizmo3DScale.cpp  GizmoResource.cpp  GizmoResource.h  GizmoTest.cpp  MetricCellsGrid.cpp  PlaneGrid3D.cpp  RayPicking.cpp  RayPicking_use_ECS.cpp  SimplestAxis.cpp  StaticMesh.cpp  StaticMesh.h  TestCameraGeometry.cpp
example/Landscape/: CMakeLists.txt
example/LightBasic/: BlinnPhongDirectionLight.cpp  CMakeLists.txt  test_luminousflux.cpp
example/NullWindow/: CMakeLists.txt  main.cpp
example/OutputGLInfo/: CMakeLists.txt  main.cpp
example/Terrain/: CMakeLists.txt  terrain_heightmap.cpp
example/Texture/: CMakeLists.txt  texture_format_list.cpp  texture_quad.cpp  texture_rect.cpp  texture_rect_array.cpp
example/TextureSampler/: CMakeLists.txt  TGATexture.cpp  main.cpp
example/Tools/: UBODefineExample.cpp
example/Vulkan/: AssetsManage.cpp  AssetsManage.h  AssimpLoader.cpp  AssimpLoader.h  AssimpLoaderMesh.cpp  AssimpLoaderMesh.h  Atmosphere.cpp  Atomsphere.cpp  CMakeLists.txt  Cubemap.cpp  Deferred.cpp  DeferredModel.cpp  DeferredRender.cpp  DeferredRenderMultiCmdBuffer.cpp  DrawText.cpp  DrawTile.cpp  EquirectangularMap.cpp  FlatColor.frag  FlatColor.vert  FragCoordTest.cpp  FullScreenRect.cpp  FullScreenTriangle.cpp  Geometry2D.cpp  Geometry3D.cpp  HQFilterTexture.cpp  InlineGeometryScene.cpp  InstanceCube.cpp  InstanceTriangle.cpp  LoadModel.cpp  LoadScene.cpp  LoadStaticMesh.cpp  OffscreenRender.cpp  PBRBasic.cpp  QtVulkanMainWindow.cpp  QtVulkanMainWindow.h  QtVulkanWindow.cpp  QtVulkanWindow.h  README_RenderToTexture.md  RayPicking.cpp  RectanglePrimitive.cpp  (+94 more)
example/common/: VulkanAppFramework.h  VulkanAppWithEventDispatcher.h  WorkManager.cpp  WorkManager.h  WorkObject.h
example/ecs/: test_boundingbox.cpp
src/Base/: CMakeLists.txt  Color4f.cpp  SystemInfo.cpp
src/Platform/: CMakeLists.txt  Window.cpp
src/RenderDevice/: CMakeLists.txt  ForceDiscreteGPU.c  VKBuffer.cpp  VKCommandBuffer.cpp  VKCommandBufferRender.cpp  VKDatabase.cpp  VKDatabaseMaterial.cpp  VKDebugOut.cpp  VKDescriptorSetLayoutCreater.cpp  VKDescriptorSets.cpp  VKDevice.cpp  VKDeviceAttribute.cpp  VKDeviceBuffer.cpp  VKDeviceCreater.cpp  VKDeviceFramebuffer.cpp  VKDeviceImage.cpp  VKDeviceRenderPass.cpp  VKDeviceRenderTarget.cpp  VKDeviceSwapchain.cpp  VKDeviceTexture.cpp  VKFence.cpp  VKImageView.cpp  VKInstance.cpp  VKMaterial.cpp  VKMaterialInstance.cpp  VKMemory.cpp  VKPhysicalDevice.cpp  VKPipeline.cpp  VKPipelineCache.cpp  VKProperties.cpp  VKQueue.cpp  VKRenderResource.cpp  VKRenderResourceMaterial.cpp  VKRenderTarget.cpp  VKRenderable.cpp  VKRenderableInstance.cpp  VKShaderModule.cpp  VKSubmitQueue.cpp  VKSwapchain.cpp  VKSwapchainRenderTarget.cpp  (+4 more)
src/RenderDriver/: BufferData.cpp  BufferObject.cpp  CMakeLists.txt  GLSL.cpp  OpenGLDebug.cpp  OpenGLExt.cpp  RenderState.cpp  Renderable.cpp  Shader.cpp  Texture1D.cpp  Texture1DDSA.cpp  Texture2D.cpp  Texture2DDSA.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferControl.h  VertexBufferControlBind.cpp  VertexBufferControlDSA.cpp  (+1 more)
(+1342 files in other folders)
