add_library(ULRE.RenderDriver STATIC    OpenGLDebug.cpp
                                        OpenGLExt.cpp
                                        GLSL.cpp
                                        Shader.cpp
                                        VertexArray.cpp
                                        VertexBuffer.cpp
                                        VertexBufferControlDSA.cpp
                                        VertexBufferControlBind.cpp
                                        TextureFormat.cpp
                                        Texture1D.cpp
                                        Texture1DDSA.cpp
                                        Texture2D.cpp
                                        Texture2DDSA.cpp)

