add_library(ULRE.RenderDriver STATIC    OpenGLDebug.cpp
                                        OpenGLExt.cpp
                                        GLSL.cpp
                                        Shader.cpp
                                        VertexArray.cpp
                                        VertexBuffer.cpp
                                        VertexBufferObject.cpp
                                        TextureFormat.cpp
                                        Texture1D.cpp
                                        Texture1DDSA.cpp
                                        Texture2D.cpp
                                        Texture2DDSA.cpp)

